kustomization/overlays/prod/auth/networkpolicy/allow-to-lldap-from-consumers.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-lldap-from-consumers-networkpolicy
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              hogs.tswn.us/lldap-client: "true"
          podSelector:
            matchLabels:
              hogs.tswn.us/lldap-client: "true"
      ports:
        - port: ldaps
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: lldap
  policyTypes:
    - Ingress
